--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,5 @@ RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/poissonconsulting/ssdtests
+BugReports: https://github.com/poissonconsulting/ssdtests/issues
