--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,3 +31,5 @@ URL: https://github.com/poissonconsulting/ssdtests, https://poissonconsulting.gi
 BugReports: https://github.com/poissonconsulting/ssdtests/issues
 Imports: 
     lifecycle
+Depends: 
+    R (>= 4.1)
