--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,11 +25,14 @@ URL: https://github.com/poissonconsulting/ssdtests,
     https://poissonconsulting.github.io/ssdtests/
 BugReports: https://github.com/poissonconsulting/ssdtests/issues
 Depends: 
-    R (>= 4.1)
-Imports: 
-    lifecycle
+    R (>= 4.1),
+    ssdtools (>= 1.0.6.9016)
+Imports:
+    ssddata (>= 1.0.0)
 Suggests: 
     testthat (>= 3.0.0)
+Remotes: 
+    poissonconsulting/ssdtools@dev
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
