--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -24,6 +24,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          - {os: macos-latest,   r: 'release'}
+
           # use 4.1 to check with rtools40's older compiler
           - {os: windows-latest, r: 'oldrel-3'}
 
