--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,12 +28,21 @@ Depends:
     R (>= 4.1),
     ssdtools (>= 1.0.6.9016)
 Imports:
+    chk,
+    dplyr,
+    readr,
     ssddata (>= 1.0.0)
 Suggests: 
-    testthat (>= 3.0.0)
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0),
+    withr
 Remotes: 
     poissonconsulting/ssdtools@dev
 Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
