add zzz-unstable tests and update for latest version of ssdtools

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
     dplyr,
     readr,
     ssddata (>= 1.0.0)
-Suggests: 
+Suggests:
+    ggplot2,
     glue,
     knitr,
     rmarkdown,
