--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Suggests:
     withr
 Remotes: 
     poissonconsulting/ssdtools@dev
+    poissonconsulting/ssddata@ssddatasets
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
